--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     
       请向下滚动，你将找到那些熟悉的站点入口：<strong>AI工具导航、技术分享博客、个人空间</strong>等等。每个站点都被我精心策划，保证了内容的独立性和专注度。我深知一个网站很难涵盖所有我想分享的内容，也不可能满足每一个人的需求。但我依旧希望在这片网络空间里，每个人都能找到属于自己的那份知识与灵感。”
     </span>
-        <img class="avatar-image" src="/img/avatar.jpg">
+        <img class="avatar-image" src="img/avatar.JPG">
     <span class="avatar-name">JonasTech</span>
     <span class="avatar-title">设计师、开发者、科技领域自媒体博主</span>
   </div>
@@ -233,7 +233,7 @@
       </div>
     </div>
     <div class="banner-pic">
-      <img class="banner-pic-img" src="https://www.jonastech.cc/equipment/" alt="banner image">
+      <img class="banner-pic-img" src="img/banner-muyu.webp" alt="banner image">
     </div>
   </div>
 <!-- 敲木鱼
