--- a/index.html
+++ b/index.html
@@ -37,21 +37,27 @@
         </a>
       </div>
       <div class="nav-center">
-        <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
-        <a href="javascript:heoWeb.scrollTo('媒体');" class="nav-item">媒体</a>
+        <a href="https://www.jonastech.cc/equipment/" class="nav-item">📑 作品集</a>
+        <a href="https://www.Jonastech.cc/" class="nav-item">✍️ 技术博文</a>
+        <a href="https://www.laogou666.com/" class="nav-item">🧑‍🚀 个人空间</a>
+        <a href="https:/ai.laogou717.com/" class="nav-item">🔥 AI导航站</a>
+        <a href="javascript:heoWeb.scrollTo('更多');" class="nav-item">🎁 更多...</a>
       </div>
       <div class="nav-right">
-        <a href="https://blog.Jonastech.cc/" class="nav-item" target="_blank">博客</a>
-        <a href="https://plog.Jonastech.cc/" class="nav-item" target="_blank">图集</a>
+        <a href="https://www.Jonastech.cc/" class="nav-item" target="_blank">博客</a>
+        <a href="https://www.laogou666.com/" class="nav-item" target="_blank">文档</a>
         <a class="nav-menu" id="nav-menu"><span class="heofont icon-menu-fill"></span></a>
       </div>
     </div>
   </div>
   <div class="menu-list" id="menu-list">
-    <a href="https://blog.Jonastech.cc/" class="nav-item" target="_blank">博客</a>
-    <a href="https://plog.Jonastech.cc/" class="nav-item" target="_blank">图集</a>
-    <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
-    <a href="javascript:heoWeb.scrollTo('媒体');" class="nav-item">媒体</a>
+    <a href="https://www.Jonastech.cc/" class="nav-item" target="_blank">博客</a>
+    <a href="https://www.laogou666.com/" class="nav-item" target="_blank">文档</a>
+    <a href="https://www.jonastech.cc/equipment/" class="nav-item">作品集</a>
+    <a href="https://www.Jonastech.cc/" class="nav-item">技术博文</a>
+    <a href="https://www.laogou666.com/;" class="nav-item">个人空间</a>
+    <a href="jhttps://ai.laogou717.com/;" class="nav-item">AI导航站</a>
+    <a href="javascript:heoWeb.scrollTo('更多');" class="nav-item">更多...</a>
   </div>
 
   <div class="first-stack need-padding">
@@ -88,7 +94,7 @@
     
       请向下滚动，你将找到那些熟悉的站点入口：<strong>AI工具导航、技术分享博客、个人空间</strong>等等。每个站点都被我精心策划，保证了内容的独立性和专注度。我深知一个网站很难涵盖所有我想分享的内容，也不可能满足每一个人的需求。但我依旧希望在这片网络空间里，每个人都能找到属于自己的那份知识与灵感。”
     </span>
-        <img class="avatar-image" src="img/avatar.JPG">
+        <img class="avatar-image" src="img/avatar.jpg">
     <span class="avatar-name">JonasTech</span>
     <span class="avatar-title">设计师、开发者、科技领域自媒体博主</span>
   </div>
@@ -112,7 +118,7 @@
   </div>
 </div>
 
-<div class="product-group need-padding" id="媒体">
+<div class="product-group need-padding" id="更多">
   <h2 class="group-title">一切开始的地方</h2>
   <span class="group-description">为互联网共享精神添砖加瓦</span>
   <div class="group-items">
@@ -136,7 +142,7 @@
     <!-- AI导航 -->
     <div class="group-item">
       <a class="group-item-icon" href="https://ai.laogou717.com" target="_blank">
-        <img class="group-item-icon-img" src="img/爱发电.webp" alt="product-icon" title="product-icon">
+        <img class="group-item-icon-img" src="https://img.jonastech.cc/file/c1e79385f8970d5215247.png" alt="product-icon" title="product-icon">
       </a>
       <div class="group-info-group">
         <div class="group-info">
@@ -152,16 +158,16 @@
 
     <!-- 个人空间 -->
     <div class="group-item">
-      <a class="group-item-icon" href="https://Blog.laogou666.com" target="_blank">
-        <img class="group-item-icon-img" src="img/爱发电.webp" alt="product-icon" title="product-icon">
+      <a class="group-item-icon" href="https://www.laogou666.com" target="_blank">
+        <img class="group-item-icon-img" src="https://img.jonastech.cc/file/5c5ad0e465c2d4d82d948.png" alt="product-icon" title="product-icon">
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://Blog.laogou666.com" target="_blank">个人空间<sup class="new">经典</sup></a>
-          <a class="discription" href="https://Blog.laogou666.com" target="_blank">laogou666改为生活记录</a>
+          <a class="title" href="https://www.laogou666.com" target="_blank">个人空间<sup class="new">经典</sup></a>
+          <a class="discription" href="https://www.laogou666.com" target="_blank">laogou666改为生活记录</a>
         </div>
         <div class="group-info-button">
-          <a class="linkbutton" href="https://Blog.laogou666.com" target="_blank">访问</a>
+          <a class="linkbutton" href="https://www.laogou666.com" target="_blank">访问</a>
           
         </div>
       </div>
@@ -201,16 +207,16 @@
 
     <!-- 竹白 -->
     <div class="group-item">
-      <a class="group-item-icon" href="https://https://weibo.com/u/7352806415/" target="_blank">
+      <a class="group-item-icon" href="https://weibo.com/u/7352806415" target="_blank">
         <img class="group-item-icon-img" src="img/微博.webp" alt="product-icon" title="product-icon">
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://https://weibo.com/u/7352806415/" target="_blank">微博</a>
-          <a class="discription" href="https://https://weibo.com/u/7352806415/" target="_blank">博客更新摘要邮件提醒</a>
+          <a class="title" href="https://weibo.com/u/7352806415" target="_blank">微博</a>
+          <a class="discription" href="https://weibo.com/u/7352806415" target="_blank">博客更新摘要邮件提醒</a>
         </div>
         <div class="group-info-button">
-          <a class="linkbutton" href="https://https://weibo.com/u/7352806415/" target="_blank">访问</a>
+          <a class="linkbutton" href="https://weibo.com/u/7352806415" target="_blank">访问</a>
         </div>
       </div>
     </div>
@@ -229,7 +235,7 @@
       </div>
       <div class="link-group">
         <a class="primary-button" href="https://space.bilibili.com/46377861/channel/collectiondetail?sid=2264872">立即观看</a>
-        <a class="second-link" href="https://blog.Jonastech.cc/about/" target="_blank">关于乔纳斯</a>
+        <a class="second-link" href="https://www.Jonastech.cc/about/" target="_blank">关于乔纳斯</a>
       </div>
     </div>
     <div class="banner-pic">
