--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="https://www.jonastech.cc/equipment/" class="nav-item">📑 作品集</a>
         <a href="https://www.Jonastech.cc/" class="nav-item">✍️ 技术博文</a>
         <a href="https://www.laogou666.com/" class="nav-item">🧑‍🚀 个人空间</a>
-        <a href="https:/ai.laogou717.com/" class="nav-item">🔥 AI导航站</a>
+        <a href="https:/nav.laogou717.com/" class="nav-item">🔥 AI导航站</a>
         <a href="javascript:heoWeb.scrollTo('更多');" class="nav-item">🎁 更多...</a>
       </div>
       <div class="nav-right">
@@ -56,7 +56,7 @@
     <a href="https://www.jonastech.cc/equipment/" class="nav-item">作品集</a>
     <a href="https://www.Jonastech.cc/" class="nav-item">技术博文</a>
     <a href="https://www.laogou666.com/;" class="nav-item">个人空间</a>
-    <a href="jhttps://ai.laogou717.com/;" class="nav-item">AI导航站</a>
+    <a href="jhttps://nav.laogou717.com/;" class="nav-item">AI导航站</a>
     <a href="javascript:heoWeb.scrollTo('更多');" class="nav-item">更多...</a>
   </div>
 
@@ -141,16 +141,16 @@
 
     <!-- AI导航 -->
     <div class="group-item">
-      <a class="group-item-icon" href="https://ai.laogou717.com" target="_blank">
+      <a class="group-item-icon" href="https://nav.laogou717.com" target="_blank">
         <img class="group-item-icon-img" src="https://img.jonastech.cc/file/c1e79385f8970d5215247.png" alt="product-icon" title="product-icon">
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://ai.laogou717.com" target="_blank">免费AI导航<sup class="new">经典</sup></a>
-          <a class="discription" href="https://ai.laogou717.com" target="_blank">laogou717这里有你想要的</a>
+          <a class="title" href="https://nav.laogou717.com" target="_blank">免费AI导航<sup class="new">经典</sup></a>
+          <a class="discription" href="https://nav.laogou717.com" target="_blank">laogou717这里有你想要的</a>
         </div>
         <div class="group-info-button">
-          <a class="linkbutton" href="https://ai.laogou717.com" target="_blank">访问</a>
+          <a class="linkbutton" href="https://nav.laogou717.com" target="_blank">访问</a>
           <span class="linkbotton-tips">免费共创</span>
         </div>
       </div>
