--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <a href="https://www.jonastech.cc/equipment/" class="nav-item">作品集</a>
     <a href="https://www.Jonastech.cc/" class="nav-item">技术博文</a>
     <a href="https://www.laogou666.com/;" class="nav-item">个人空间</a>
-    <a href="https://nav.laogou717.com;" class="nav-item">AI导航站</a>
+    <a href="https:/nav.laogou717.com/" class="nav-item"> AI导航站</a>
     <a href="javascript:heoWeb.scrollTo('更多');" class="nav-item">更多...</a>
   </div>
 
