--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="https://blog.Jonastech.cc/equipment/" class="nav-item">📑 作品集</a>
         <a href="https://blog.Jonastech.cc/" class="nav-item">✍️ 技术博文</a>
         <a href="https://www.laogou666.com/" class="nav-item">🧑‍🚀 个人空间</a>
-        <a href="https://nav.jonastech.com/" class="nav-item">🔥 AI导航站</a>
+        <a href="https://nav.jonastech.cc/" class="nav-item">🔥 AI导航站</a>
         <a href="javascript:heoWeb.scrollTo('更多');" class="nav-item">🎁 更多...</a>
       </div>
       <div class="nav-right">
@@ -56,7 +56,7 @@
     <a href="https://blog.Jonastech.cc/equipment/" class="nav-item">作品集</a>
     <a href="https://blog.Jonastech.cc/" class="nav-item">技术博文</a>
     <a href="https://www.laogou666.com/" class="nav-item">个人空间</a>
-    <a href="https://nav.jonastech.com/" class="nav-item"> AI导航站</a>
+    <a href="https://nav.jonastech.cc/" class="nav-item"> AI导航站</a>
     <a href="javascript:heoWeb.scrollTo('更多');" class="nav-item">更多...</a>
   </div>
 
@@ -141,16 +141,16 @@
 
     <!-- AI导航 -->
     <div class="group-item">
-      <a class="group-item-icon" href="https://nav.jonastech.com" target="_blank">
+      <a class="group-item-icon" href="https://nav.jonastech.cc" target="_blank">
         <img class="group-item-icon-img" src="https://img.jonastech.cc/file/c1e79385f8970d5215247.png" alt="product-icon" title="product-icon">
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://nav.jonastech.com" target="_blank">免费AI导航<sup class="new">经典</sup></a>
-          <a class="discription" href="https://nav.jonastech.com" target="_blank">laogou717这里有你想要的</a>
+          <a class="title" href="https://nav.jonastech.cc" target="_blank">免费AI导航<sup class="new">经典</sup></a>
+          <a class="discription" href="https://nav.jonastech.cc" target="_blank">laogou717这里有你想要的</a>
         </div>
         <div class="group-info-button">
-          <a class="linkbutton" href="https://nav.jonastech.com" target="_blank">访问</a>
+          <a class="linkbutton" href="https://nav.jonastech.cc" target="_blank">访问</a>
           <span class="linkbotton-tips">免费共创</span>
         </div>
       </div>
@@ -250,16 +250,16 @@
 
       <!-- 敲木鱼 
       <div class="group-item">
-        <a class="group-item-icon" href="https://blog.jonastech.com/p/671f98c8.html" target="_blank">
+        <a class="group-item-icon" href="https://blog.jonastech.cc/p/671f98c8.html" target="_blank">
           <img class="group-item-icon-img" src="img/敲木鱼.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://blog.jonastech.com/p/671f98c8.html" target="_blank">敲木鱼<sup class="hot">热门</sup></a>
-            <a class="discription" href="https://blog.jonastech.com/p/671f98c8.html" target="_blank">将世间万物化作电子木鱼</a>
+            <a class="title" href="https://blog.jonastech.cc/p/671f98c8.html" target="_blank">敲木鱼<sup class="hot">热门</sup></a>
+            <a class="discription" href="https://blog.jonastech.cc/p/671f98c8.html" target="_blank">将世间万物化作电子木鱼</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://blog.jonastech.com/p/671f98c8.html" target="_blank">获取</a>
+            <a class="linkbutton" href="https://blog.jonastech.cc/p/671f98c8.html" target="_blank">获取</a>
             <span class="linkbotton-tips">买断制</span>
           </div>
         </div>
@@ -267,16 +267,16 @@
 
       <!-- 轻节食 
       <div class="group-item">
-        <a class="group-item-icon" href="https://blog.jonastech.com/p/4db484b3.html" target="_blank">
+        <a class="group-item-icon" href="https://blog.jonastech.cc/p/4db484b3.html" target="_blank">
           <img class="group-item-icon-img" src="img/轻节食.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://blog.jonastech.com/p/4db484b3.html" target="_blank">轻节食</a>
-            <a class="discription" href="https://blog.jonastech.com/p/4db484b3.html" target="_blank">科学制定断食计划</a>
+            <a class="title" href="https://blog.jonastech.cc/p/4db484b3.html" target="_blank">轻节食</a>
+            <a class="discription" href="https://blog.jonastech.cc/p/4db484b3.html" target="_blank">科学制定断食计划</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://blog.jonastech.com/p/4db484b3.html" target="_blank">获取</a>
+            <a class="linkbutton" href="https://blog.jonastech.cc/p/4db484b3.html" target="_blank">获取</a>
             <span class="linkbotton-tips">买断制</span>
           </div>
         </div>
@@ -284,16 +284,16 @@
 
       <!-- 比例计 
       <div class="group-item">
-        <a class="group-item-icon" href="https://blog.jonastech.com/p/9df485ea.html" target="_blank">
+        <a class="group-item-icon" href="https://blog.jonastech.cc/p/9df485ea.html" target="_blank">
           <img class="group-item-icon-img" src="img/比例计.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://blog.jonastech.com/p/9df485ea.html" target="_blank">比例计</a>
-            <a class="discription" href="https://blog.jonastech.com/p/9df485ea.html" target="_blank">设计师的高效比例计算工具</a>
+            <a class="title" href="https://blog.jonastech.cc/p/9df485ea.html" target="_blank">比例计</a>
+            <a class="discription" href="https://blog.jonastech.cc/p/9df485ea.html" target="_blank">设计师的高效比例计算工具</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://blog.jonastech.com/p/9df485ea.html" target="_blank">获取</a>
+            <a class="linkbutton" href="https://blog.jonastech.cc/p/9df485ea.html" target="_blank">获取</a>
             <span class="linkbotton-tips">买断制</span>
           </div>
         </div>
@@ -301,16 +301,16 @@
 
       <!-- DelSpace3 
       <div class="group-item">
-        <a class="group-item-icon" href="https://blog.jonastech.com/p/a170ac02.html" target="_blank">
+        <a class="group-item-icon" href="https://blog.jonastech.cc/p/a170ac02.html" target="_blank">
           <img class="group-item-icon-img" src="img/DelSpace3.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://blog.jonastech.com/p/a170ac02.html" target="_blank">DelSpace3</a>
-            <a class="discription" href="https://blog.jonastech.com/p/a170ac02.html" target="_blank">文本自动化处理工具</a>
+            <a class="title" href="https://blog.jonastech.cc/p/a170ac02.html" target="_blank">DelSpace3</a>
+            <a class="discription" href="https://blog.jonastech.cc/p/a170ac02.html" target="_blank">文本自动化处理工具</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://blog.jonastech.com/p/a170ac02.html" target="_blank">获取</a>
+            <a class="linkbutton" href="https://blog.jonastech.cc/p/a170ac02.html" target="_blank">获取</a>
             <span class="linkbotton-tips">买断制</span>
           </div>
         </div>
@@ -318,16 +318,16 @@
 
       <!-- 摸鱼 
       <div class="group-item">
-        <a class="group-item-icon" href="https://blog.jonastech.com/p/1b0d95ef.html" target="_blank">
+        <a class="group-item-icon" href="https://blog.jonastech.cc/p/1b0d95ef.html" target="_blank">
           <img class="group-item-icon-img" src="img/摸鱼.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://blog.jonastech.com/p/1b0d95ef.html" target="_blank">摸鱼</a>
-            <a class="discription" href="https://blog.jonastech.com/p/1b0d95ef.html" target="_blank">可自定义的屏幕保护动画工具</a>
+            <a class="title" href="https://blog.jonastech.cc/p/1b0d95ef.html" target="_blank">摸鱼</a>
+            <a class="discription" href="https://blog.jonastech.cc/p/1b0d95ef.html" target="_blank">可自定义的屏幕保护动画工具</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://blog.jonastech.com/p/1b0d95ef.html" target="_blank">获取</a>
+            <a class="linkbutton" href="https://blog.jonastech.cc/p/1b0d95ef.html" target="_blank">获取</a>
           </div>
         </div>
       </div>
