--- a/index.html
+++ b/index.html
@@ -125,16 +125,16 @@
 
     <!-- 博客 -->
     <div class="group-item">
-      <a class="group-item-icon" href="https://jonastech.cc/" target="_blank">
+      <a class="group-item-icon" href="https://blog.jonastech.cc/" target="_blank">
         <img class="group-item-icon-img" src="img/博客.webp" alt="product-icon" title="product-icon">
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://jonastech.cc/" target="_blank">博客<sup class="hot">推荐</sup></a>
-          <a class="discription" href="https://jonastech.cc/" target="_blank">分享设计与科技博客</a>
+          <a class="title" href="https://blog.jonastech.cc/" target="_blank">博客<sup class="hot">推荐</sup></a>
+          <a class="discription" href="https://blog.jonastech.cc/" target="_blank">分享设计与科技博客</a>
         </div>
         <div class="group-info-button">
-          <a class="linkbutton" href="https://jonastech.cc/" target="_blank">访问</a>
+          <a class="linkbutton" href="https://blog.jonastech.cc/" target="_blank">访问</a>
         </div>
       </div>
     </div>
