--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
         </a>
       </div>
       <div class="nav-center">
-        <a href="https://blog.Jonastech.cc/equipment/" class="nav-item">📑 作品集</a>
-        <a href="https://blog.Jonastech.cc/" class="nav-item">✍️ 技术博文</a>
+        <a href="https://blog.laogou717.com/equipment/" class="nav-item">📑 作品集</a>
+        <a href="https://blog.laogou717.com/" class="nav-item">✍️ 技术博文</a>
         <a href="https://www.laogou666.com/" class="nav-item">🧑‍🚀 个人空间</a>
-        <a href="https://nav.jonastech.cc/" class="nav-item">🔥 AI导航站</a>
+        <a href="https://nav.laogou717.com/" class="nav-item">🔥 AI导航站</a>
         <a href="javascript:heoWeb.scrollTo('更多');" class="nav-item">🎁 更多...</a>
       </div>
       <div class="nav-right">
-        <a href="https://blog.Jonastech.cc/" class="nav-item" target="_blank">博客</a>
+        <a href="https://blog.laogou717.com/" class="nav-item" target="_blank">博客</a>
         <a href="https://www.laogou666.com/" class="nav-item" target="_blank">文档</a>
         <a class="nav-menu" id="nav-menu"><span class="heofont icon-menu-fill"></span></a>
       </div>
     </div>
   </div>
   <div class="menu-list" id="menu-list">
-    <a href="https://blog.Jonastech.cc/" class="nav-item" target="_blank">博客</a>
+    <a href="https://blog.laogou717.com/" class="nav-item" target="_blank">博客</a>
     <a href="https://www.laogou666.com/" class="nav-item" target="_blank">文档</a>
-    <a href="https://blog.Jonastech.cc/equipment/" class="nav-item">作品集</a>
-    <a href="https://blog.Jonastech.cc/" class="nav-item">技术博文</a>
+    <a href="https://blog.laogou717.com/equipment/" class="nav-item">作品集</a>
+    <a href="https://blog.laogou717.com/" class="nav-item">技术博文</a>
     <a href="https://www.laogou666.com/" class="nav-item">个人空间</a>
-    <a href="https://nav.jonastech.cc/" class="nav-item"> AI导航站</a>
+    <a href="https://nav.laogou717.com/" class="nav-item"> AI导航站</a>
     <a href="javascript:heoWeb.scrollTo('更多');" class="nav-item">更多...</a>
   </div>
 
@@ -70,7 +70,7 @@
         <span class="discription-text">给文明以<span class="inline-word">岁月，</span><br>来打造令人难忘的<span class="inline-word">体验。</span></span>
       </div>
       <div class="first-stack-links">
-        <a href="https://blog.Jonastech.cc/about/" class="about-button" target="_blank">了解更多</a>
+        <a href="https://blog.laogou717.com/about/" class="about-button" target="_blank">了解更多</a>
         <a href="https://www.douyin.com/user/MS4wLjABAAAAz34v-30GSe_nHW3o-dSlBnKeiVcmUEKoeAlba8Ovl84" class="about-button social-button" target="_blank">
           <i class="heofont icon-tiktok"></i>
         </a>
@@ -83,7 +83,7 @@
       </div>
       
     </div>
-    <a href="https://blog.Jonastech.cc/about/" class="right-stack" target="_blank">
+    <a href="https://blog.laogou717.com/about/" class="right-stack" target="_blank">
       <img class="banner-img" src="img/封面2.webp" alt="banner" title="banner">
     </a>
   </div>
@@ -109,8 +109,8 @@
       <span class="description">已帮助数百万互联网使用者更好的探索数字<span class="inline-word">世界<span class="punctuation">。</span></span></span>
     </div>
     <div class="link-group">
-      <a class="primary-button" href="https://blog.Jonastech.cc">访问项目</a>
-      <a class="second-link" href="https://blog.Jonastech.cc/timeline/" target="_blank">关于今后的计划</a>
+      <a class="primary-button" href="https://blog.laogou717.com">访问项目</a>
+      <a class="second-link" href="https://blog.laogou717.com/timeline/" target="_blank">关于今后的计划</a>
     </div>
   </div>
   <div class="banner-pic">
@@ -125,32 +125,32 @@
 
     <!-- 博客 -->
     <div class="group-item">
-      <a class="group-item-icon" href="https://blog.jonastech.cc/" target="_blank">
+      <a class="group-item-icon" href="https://blog.laogou717.com/" target="_blank">
         <img class="group-item-icon-img" src="img/博客.webp" alt="product-icon" title="product-icon">
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://blog.jonastech.cc/" target="_blank">博客<sup class="hot">推荐</sup></a>
-          <a class="discription" href="https://blog.jonastech.cc/" target="_blank">分享设计与科技博客</a>
+          <a class="title" href="https://blog.laogou717.com/" target="_blank">博客<sup class="hot">推荐</sup></a>
+          <a class="discription" href="https://blog.laogou717.com/" target="_blank">分享设计与科技博客</a>
         </div>
         <div class="group-info-button">
-          <a class="linkbutton" href="https://blog.jonastech.cc/" target="_blank">访问</a>
+          <a class="linkbutton" href="https://blog.laogou717.com/" target="_blank">访问</a>
         </div>
       </div>
     </div>
 
     <!-- AI导航 -->
     <div class="group-item">
-      <a class="group-item-icon" href="https://nav.jonastech.cc" target="_blank">
-        <img class="group-item-icon-img" src="https://img.jonastech.cc/file/c1e79385f8970d5215247.png" alt="product-icon" title="product-icon">
+      <a class="group-item-icon" href="https://nav.laogou717.com" target="_blank">
+        <img class="group-item-icon-img" src="https://img.laogou717.com/file/c1e79385f8970d5215247.png" alt="product-icon" title="product-icon">
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://nav.jonastech.cc" target="_blank">免费AI导航<sup class="new">经典</sup></a>
-          <a class="discription" href="https://nav.jonastech.cc" target="_blank">laogou717这里有你想要的</a>
+          <a class="title" href="https://nav.laogou717.com" target="_blank">免费AI导航<sup class="new">经典</sup></a>
+          <a class="discription" href="https://nav.laogou717.com" target="_blank">laogou717这里有你想要的</a>
         </div>
         <div class="group-info-button">
-          <a class="linkbutton" href="https://nav.jonastech.cc" target="_blank">访问</a>
+          <a class="linkbutton" href="https://nav.laogou717.com" target="_blank">访问</a>
           <span class="linkbotton-tips">免费共创</span>
         </div>
       </div>
@@ -159,7 +159,7 @@
     <!-- 个人空间 -->
     <div class="group-item">
       <a class="group-item-icon" href="https://www.laogou666.com" target="_blank">
-        <img class="group-item-icon-img" src="https://img.jonastech.cc/file/5c5ad0e465c2d4d82d948.png" alt="product-icon" title="product-icon">
+        <img class="group-item-icon-img" src="https://img.laogou717.com/file/5c5ad0e465c2d4d82d948.png" alt="product-icon" title="product-icon">
       </a>
       <div class="group-info-group">
         <div class="group-info">
@@ -235,7 +235,7 @@
       </div>
       <div class="link-group">
         <a class="primary-button" href="https://space.bilibili.com/46377861/channel/collectiondetail?sid=2264872">立即观看</a>
-        <a class="second-link" href="https://blog.Jonastech.cc/about/" target="_blank">关于乔纳斯</a>
+        <a class="second-link" href="https://blog.laogou717.com/about/" target="_blank">关于乔纳斯</a>
       </div>
     </div>
     <div class="banner-pic">
@@ -250,16 +250,16 @@
 
       <!-- 敲木鱼 
       <div class="group-item">
-        <a class="group-item-icon" href="https://blog.jonastech.cc/p/671f98c8.html" target="_blank">
+        <a class="group-item-icon" href="https://blog.laogou717.com/p/671f98c8.html" target="_blank">
           <img class="group-item-icon-img" src="img/敲木鱼.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://blog.jonastech.cc/p/671f98c8.html" target="_blank">敲木鱼<sup class="hot">热门</sup></a>
-            <a class="discription" href="https://blog.jonastech.cc/p/671f98c8.html" target="_blank">将世间万物化作电子木鱼</a>
+            <a class="title" href="https://blog.laogou717.com/p/671f98c8.html" target="_blank">敲木鱼<sup class="hot">热门</sup></a>
+            <a class="discription" href="https://blog.laogou717.com/p/671f98c8.html" target="_blank">将世间万物化作电子木鱼</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://blog.jonastech.cc/p/671f98c8.html" target="_blank">获取</a>
+            <a class="linkbutton" href="https://blog.laogou717.com/p/671f98c8.html" target="_blank">获取</a>
             <span class="linkbotton-tips">买断制</span>
           </div>
         </div>
@@ -267,16 +267,16 @@
 
       <!-- 轻节食 
       <div class="group-item">
-        <a class="group-item-icon" href="https://blog.jonastech.cc/p/4db484b3.html" target="_blank">
+        <a class="group-item-icon" href="https://blog.laogou717.com/p/4db484b3.html" target="_blank">
           <img class="group-item-icon-img" src="img/轻节食.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://blog.jonastech.cc/p/4db484b3.html" target="_blank">轻节食</a>
-            <a class="discription" href="https://blog.jonastech.cc/p/4db484b3.html" target="_blank">科学制定断食计划</a>
+            <a class="title" href="https://blog.laogou717.com/p/4db484b3.html" target="_blank">轻节食</a>
+            <a class="discription" href="https://blog.laogou717.com/p/4db484b3.html" target="_blank">科学制定断食计划</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://blog.jonastech.cc/p/4db484b3.html" target="_blank">获取</a>
+            <a class="linkbutton" href="https://blog.laogou717.com/p/4db484b3.html" target="_blank">获取</a>
             <span class="linkbotton-tips">买断制</span>
           </div>
         </div>
@@ -284,16 +284,16 @@
 
       <!-- 比例计 
       <div class="group-item">
-        <a class="group-item-icon" href="https://blog.jonastech.cc/p/9df485ea.html" target="_blank">
+        <a class="group-item-icon" href="https://blog.laogou717.com/p/9df485ea.html" target="_blank">
           <img class="group-item-icon-img" src="img/比例计.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://blog.jonastech.cc/p/9df485ea.html" target="_blank">比例计</a>
-            <a class="discription" href="https://blog.jonastech.cc/p/9df485ea.html" target="_blank">设计师的高效比例计算工具</a>
+            <a class="title" href="https://blog.laogou717.com/p/9df485ea.html" target="_blank">比例计</a>
+            <a class="discription" href="https://blog.laogou717.com/p/9df485ea.html" target="_blank">设计师的高效比例计算工具</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://blog.jonastech.cc/p/9df485ea.html" target="_blank">获取</a>
+            <a class="linkbutton" href="https://blog.laogou717.com/p/9df485ea.html" target="_blank">获取</a>
             <span class="linkbotton-tips">买断制</span>
           </div>
         </div>
@@ -301,16 +301,16 @@
 
       <!-- DelSpace3 
       <div class="group-item">
-        <a class="group-item-icon" href="https://blog.jonastech.cc/p/a170ac02.html" target="_blank">
+        <a class="group-item-icon" href="https://blog.laogou717.com/p/a170ac02.html" target="_blank">
           <img class="group-item-icon-img" src="img/DelSpace3.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://blog.jonastech.cc/p/a170ac02.html" target="_blank">DelSpace3</a>
-            <a class="discription" href="https://blog.jonastech.cc/p/a170ac02.html" target="_blank">文本自动化处理工具</a>
+            <a class="title" href="https://blog.laogou717.com/p/a170ac02.html" target="_blank">DelSpace3</a>
+            <a class="discription" href="https://blog.laogou717.com/p/a170ac02.html" target="_blank">文本自动化处理工具</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://blog.jonastech.cc/p/a170ac02.html" target="_blank">获取</a>
+            <a class="linkbutton" href="https://blog.laogou717.com/p/a170ac02.html" target="_blank">获取</a>
             <span class="linkbotton-tips">买断制</span>
           </div>
         </div>
@@ -318,16 +318,16 @@
 
       <!-- 摸鱼 
       <div class="group-item">
-        <a class="group-item-icon" href="https://blog.jonastech.cc/p/1b0d95ef.html" target="_blank">
+        <a class="group-item-icon" href="https://blog.laogou717.com/p/1b0d95ef.html" target="_blank">
           <img class="group-item-icon-img" src="img/摸鱼.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://blog.jonastech.cc/p/1b0d95ef.html" target="_blank">摸鱼</a>
-            <a class="discription" href="https://blog.jonastech.cc/p/1b0d95ef.html" target="_blank">可自定义的屏幕保护动画工具</a>
+            <a class="title" href="https://blog.laogou717.com/p/1b0d95ef.html" target="_blank">摸鱼</a>
+            <a class="discription" href="https://blog.laogou717.com/p/1b0d95ef.html" target="_blank">可自定义的屏幕保护动画工具</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://blog.jonastech.cc/p/1b0d95ef.html" target="_blank">获取</a>
+            <a class="linkbutton" href="https://blog.laogou717.com/p/1b0d95ef.html" target="_blank">获取</a>
           </div>
         </div>
       </div>
